Big Update Landing page

--- a/frontend/src/core/locales/resources/en.json
+++ b/frontend/src/core/locales/resources/en.json
@@ -64,11 +64,22 @@
     "thankyou_modal_description_3": "Wishing WISer a new year full of joy and happiness"
   },
   "happy_run": {
+    "nav_item_1": "Overview",
+    "nav_item_2": "Happy Run",
+    "nav_item_3": "Happy Summer",
+    "nav_item_4": "FAQ",
     "form_heading": "EVENT <span className=\"text-hr-honey\">HAPPY RUN 2025</span> <br/> <span className=\"text-hr-ember\">REGISTRATION</span>",
     "form_description_1": "Welcome to the event",
     "form_description_2": "Please register for the event with the information below.",
     "form": {
-      "user_code": "Student/Employee ID",
+      "section_1_heading": "TICKET CLASS INFORMATION",
+      "section_2_heading": "FOR STUDENTS / TEACHERS / STAFF AT WELLSPRING SAIGON",
+      "section_3_heading": "FOR STUDENTS / COMPANIONS",
+      "section_4_heading": "CONTACT INFORMATION",
+      "section_4_desc_1": "*Important information to help the organizers contact (if needed) and send registration confirmation to participants",
+      "section_4_desc_2": "*If the registrant is a student, please fill in the contact information of the parent or accompanying adult",
+      "young_user_warning": "*Note: Elementary students need to be accompanied by an adult",
+      "user_code": "Student/Staff ID",
       "user_code_required": "Please enter the ID",
       "user_code_duplicate": "Duplicate ID",
       "user_code_invalid": "Invalid ID",
@@ -76,41 +87,53 @@
       "full_name": "Full Name",
       "full_name_desc": "*Note: Full name of the parent or accompanying adult",
       "full_name_placeholder": "Enter full name",
-      "full_name_required": "Please enter the full name",
+      "full_name_required": "Please enter full name",
       "class_department": "Class/Department",
       "ticket_class": "Ticket Class",
       "ticket_class_placeholder": "Select ticket class",
-      "ticket_class_required": "Please select a ticket class",
+      "ticket_class_required": "Please select ticket class",
       "ticket_distance": "Distance",
       "ticket_distance_placeholder": "Select distance",
-      "ticket_distance_required": "Please select a distance",
-      "shirt_size": "T-Shirt Size",
-      "shirt_size_placeholder": "Select T-Shirt size",
-      "shirt_size_required": "Please select a T-Shirt size",
+      "ticket_distance_required": "Please select distance",
+      "shirt_size": "Shirt Size",
+      "shirt_size_placeholder": "Select shirt size",
+      "shirt_size_required": "Please select shirt size",
       "mobile_number": "Phone Number",
       "mobile_number_desc": "*Note: Phone number of the parent or accompanying adult",
       "mobile_number_placeholder": "Enter phone number",
-      "mobile_number_required": "Please enter the phone number",
+      "mobile_number_required": "Please enter phone number",
       "email": "Email",
       "email_desc": "*Note: One email address of the parent",
       "email_placeholder": "Enter email",
-      "email_required": "Please enter the email",
+      "email_required": "Please enter email",
       "email_invalid": "Invalid email",
       "content_bib": "BIB Content",
       "content_bib_desc": "*Only for Well-being ticket class",
       "content_bib_placeholder": "Content from 6-8 characters",
       "content_bib_max": "Exceeds 8 characters",
-      "empty_companion": "No parent/accompanying person currently",
+      "empty_companion": "No parent/companion available",
       "no_item": "No.",
       "price": "Ticket Price",
       "total_price": "Total: {{number}}",
+      "total_paid": "Paid: {{number}}",
+      "total_payment_pending": "Remaining: {{number}}",
+      "status": "Status",
       "payment_success_heading": "<span className=\"text-hr-ember\">YOU HAVE SUCCESSFULLY REGISTERED</span> <br/> FOR THE EVENT <span className=\"text-hr-honey\">HAPPY RUN 2025</span>",
       "payment_success_qr_guide": "Please make the payment using the QR code below",
+      "transfer_content": "Transfer content: {{content}}",
       "payment_success_desc_1": "A successful registration email will be sent to your email address.",
       "payment_success_desc_2": "Thank you very much and see you at the Happy Run 2025 event!",
-      "payment_success_note": "If you do not receive the confirmation email or need support with your order, please contact the organizers: <b>happyrun2025@wellspringsaigon.edu.vn</b>",
-      "policy_heading": "<span className=\"text-hr-ember\">CONFIRMATION OF UNDERSTANDING</span> <br/> AND <span className=\"text-brand-persian\">DISCLAIMER</span> <br/> WHEN PARTICIPATING IN <span className=\"text-hr-honey\">HAPPY RUN 2025</span>"
+      "payment_success_note": "If you do not receive a confirmation email or need support with your order, please contact the organizers: <b>happyrun2025@wellspringsaigon.edu.vn</b>",
+      "policy_heading": "<span className=\"text-hr-ember\">CONFIRMATION OF UNDERSTANDING</span> <br/> AND <span className=\"text-brand-persian\">DISCLAIMER</span> <br/> WHEN PARTICIPATING IN <span className=\"text-hr-honey\">HAPPY RUN 2025</span>",
+      "list_status": {
+        "Pending Payment": "Pending Payment",
+        "Canceled": "Canceled",
+        "Paid": "Paid",
+        "Attended": "Attended",
+        "Refunded": "Refunded"
+      }
     },
+    "order_title": "Order Details <span className=\"text-hr-honey\">Order</span>",
     "buttons": {
       "add_person": "Add Person +",
       "register_now": "Register Now",
@@ -119,23 +142,41 @@
       "download_qr": "Download QR Code",
       "finish": "Finish",
       "agree": "I Agree and Continue",
-      "not_agree": "I Do Not Agree"
+      "not_agree": "I Do Not Agree",
+      "search_now": "Search Now",
+      "view_more": "View More",
+      "view_less": "View Less"
     },
     "ticket_sale_official_time": "Official Ticket Sale Time",
-    "count_down_heading": "Welcome WISERS to Happy Run 2025 & <br/> Kick off Happy Summer 2025",
-    "count_down_date": "Only <span className=\"text-[40rem] font-semibold\">{{day}}</span> days <span className=\"text-[40rem] font-semibold\">{{minutes}}</span> minutes <span className=\"text-[40rem] font-semibold\">{{seconds}}</span> seconds left",
+    "count_down_heading": "Welcome WISERS to <br className=\"block md:hidden\"/>the Happy Run 2025 & <br/> The Happy Summer 2025 Kick-off event",
+    "count_down_date": "Only <span className=\"text-[14rem] md:text-[40rem] font-semibold\">{{day}}</span> days <span className=\"text-[14rem] md:text-[40rem] font-semibold\">{{hours}}</span> hours <span className=\"text-[14rem] md:text-[40rem] font-semibold\">{{minutes}}</span> minutes <span className=\"text-[14rem] md:text-[40rem] font-semibold\">{{seconds}}</span> seconds",
     "teaser_heading_1": "Happy",
     "teaser_heading_2": "Run",
     "target_heading": "Target",
-    "route_heading": "Route",
-    "detailed_route_heading": "Detailed Route",
-    "timing_route_heading": "Timing",
-    "highlight_route_heading": "Highlights",
+    "route_heading": "Track",
+    "detailed_route_heading": "Track details",
+    "timing_route_heading": "Track finish time",
+    "highlight_route_heading": "Outstanding",
     "ticket_heading": "Ticket Class",
-    "ticket_description": "Click on each Ticket Class to see details",
+    "ticket_description": "Click on each ticket to see details",
     "kit_heading": "Runner Kit",
-    "kit_description": "Option to customize BIB content <span className=\"text-hr-ember\">for Well-being ticket class</span>",
-    "kit_meta": "(Content includes up to 8 characters: letters and numbers of your choice)"
+    "kit_description": "Option to choose content to print on personal BIB <br className=\"block md:hidden\"/> <span className=\"text-hr-ember\">for Well-being ticket class</span>",
+    "kit_meta": "(Content includes up to 8 characters: letters and numbers of your choice)",
+    "search_image_heading": "Capture Happy Run moments",
+    "search_image_desc": "Image browsing with <span class=\"text-hr-honey text-[10rem] md:text-[28rem] font-bold\">AI tool</span>",
+    "info_heading": "Information",
+    "info_item_title_1": "Participants",
+    "info_item_title_2": "Event Schedule",
+    "info_item_title_3": "Time & Location",
+    "info_item_title_4": "Awards",
+    "info_item_title_5": "Regulations",
+    "station_heading": "Challenge Station",
+    "station_n": "Station {{number}}",
+    "faq_heading": "FAQ",
+    "collaboration_units": "Collaborating Units",
+    "info_booker": "Booker Information",
+    "info_order": "Order Information",
+    "order_status": "Order Status"
   },
   "nutritional_journey": {
     "title": "Hành Trình Dinh Dưỡng",
