--- a/frontend/src/core/locales/resources/vn.json
+++ b/frontend/src/core/locales/resources/vn.json
@@ -20,6 +20,8 @@
     "refresh_page": "Tải lại trang",
     "from_d_to_d": "Từ {{from}} đến {{to}}",
     "full_name": "Họ tên",
+    "phone": "Số điện thoại",
+    "email": "Email",
     "class": "Lớp",
     "student_code": "MSHS",
     "event_email": "Email chương trình"
@@ -64,10 +66,21 @@
     "thankyou_modal_description_3": "Chúc WISer sẽ có một năm mới thật nhiều niềm vui và hạnh phúc"
   },
   "happy_run": {
+    "nav_item_1": "Tổng quan",
+    "nav_item_2": "Happy Run",
+    "nav_item_3": "Happy Summer",
+    "nav_item_4": "FAQ",
     "form_heading": "SỰ KIỆN <span className=\"text-hr-honey\">HAPPY RUN 2025</span> <br/> <span className=\"text-hr-ember\">ĐĂNG KÝ THAM GIA</span>",
     "form_description_1": "Chào mừng bạn đến với sự kiện",
     "form_description_2": "Hãy đăng ký tham dự sự kiện theo thông tin bên dưới.",
     "form": {
+      "section_1_heading": "THÔNG TIN ƯU ĐÃI HẠNG VÉ",
+      "section_2_heading": "PHẦN DÀNH CHO HỌC SINH / GIÁO VIÊN / NHÂN VIÊN TẠI WELLSPRING SAIGON",
+      "section_3_heading": "PHẦN DÀNH CHO HỌC SINH / NGƯỜI ĐI KÈM",
+      "section_4_heading": "THÔNG TIN LIÊN HỆ",
+      "section_4_desc_1": "*Thông tin quan trọng giúp BTC liên hệ (khi cần) và gửi xác nhận đăng ký đến người tham gia",
+      "section_4_desc_2": "*Nếu đối tượng đăng ký là Học sinh, vui lòng điền thông tin liên hệ của PHHS hoặc người lớn đi cùng",
+      "young_user_warning": "*Lưu ý: với Học sinh Tiểu học cần có người lớn đi cùng",
       "user_code": "Mã số Học sinh/GV-NV",
       "user_code_required": "Hãy nhập mã số",
       "user_code_duplicate": "Mã số trùng lặp",
@@ -104,13 +117,25 @@
       "no_item": "STT",
       "price": "Giá vé",
       "total_price": "Tổng tiền: {{number}}",
+      "total_paid": "Đã thanh toán: {{number}}",
+      "total_payment_pending": "Còn lại: {{number}}",
+      "status": "Trạng thái",
       "payment_success_heading": "<span className=\"text-hr-ember\">BẠN ĐÃ ĐĂNG KÝ THÀNH CÔNG</span> <br/> SỰ KIỆN <span className=\"text-hr-honey\">HAPPY RUN 2025</span>",
       "payment_success_qr_guide": "Vui lòng thực hiện thanh toán đơn hàng bằng mã QR dưới đây",
+      "transfer_content": "Nội dung chuyển khoản: {{content}}",
       "payment_success_desc_1": "Email đăng ký thành công sẽ được hệ thống gửi về địa chỉ email của bạn.",
       "payment_success_desc_2": "Xin chân thành cảm ơn và hẹn gặp lại các bạn tại sự kiện Happy Run 2025!",
       "payment_success_note": "Trong trường hợp không nhận được email xác nhận thông tin hoặc cần hỗ trợ về đơn hàng, vui lòng liên hệ BTC: <b>happyrun2025@wellspringsaigon.edu.vn</b>",
-      "policy_heading": "<span className=\"text-hr-ember\">XÁC NHẬN ĐỌC HIỂU</span> <br/> VÀ <span className=\"text-brand-persian\">MIỄN TRỪ TRÁCH NHIỆM </span> <br/> KHI THAM GIA <span className=\"text-hr-honey\">HAPPY RUN 2025</span>"
+      "policy_heading": "<span className=\"text-hr-ember\">XÁC NHẬN ĐỌC HIỂU</span> <br/> VÀ <span className=\"text-brand-persian\">MIỄN TRỪ TRÁCH NHIỆM </span> <br/> KHI THAM GIA <span className=\"text-hr-honey\">HAPPY RUN 2025</span>",
+      "list_status": {
+        "Pending Payment": "Chờ xác nhận",
+        "Canceled": "Đã hủy",
+        "Paid": "Đã thanh toán",
+        "Attended": "Đã tham gia",
+        "Refunded": "Đã hoàn tiền"
+      }
     },
+    "order_title": "Chi Tiết <span className=\"text-hr-honey\">Đơn Hàng</span>",
     "buttons": {
       "add_person": "Thêm người +",
       "register_now": "Đăng ký ngay",
@@ -119,23 +144,41 @@
       "download_qr": "Tải mã QR",
       "finish": "Hoàn thành",
       "agree": "Tôi đồng ý và Tiếp Tục",
-      "not_agree": "Tôi không đồng ý"
+      "not_agree": "Tôi không đồng ý",
+      "search_now": "Tra cứu ngay",
+      "view_more": "Xem thêm",
+      "view_less": "Thu gọn"
     },
     "ticket_sale_official_time": "Thời gian bán vé chính thức",
-    "count_down_heading": "Chào mừng các WISERS đến với Happy Run 2025 & <br/> Khởi động Happy Summer 2025",
-    "count_down_date": "Còn <span className=\"text-[40rem] font-semibold\">{{day}}</span> ngày <span className=\"text-[40rem] font-semibold\">{{minutes}}</span> phút <span className=\"text-[40rem] font-semibold\">{{seconds}}</span> giây",
+    "count_down_heading": "Chào mừng các WISERS đến với <br className=\"block md:hidden\"/> Happy Run 2025 & <br/> Khởi động Happy Summer 2025",
+    "count_down_date": "Còn <span className=\"text-[14rem] md:text-[40rem] font-semibold\">{{day}}</span> ngày <span className=\"text-[14rem] md:text-[40rem] font-semibold\">{{hours}}</span> giờ <span className=\"text-[14rem] md:text-[40rem] font-semibold\">{{minutes}}</span> phút <span className=\"text-[14rem] md:text-[40rem] font-semibold\">{{seconds}}</span> giây",
     "teaser_heading_1": "Happy",
     "teaser_heading_2": "Run",
     "target_heading": "Mục tiêu",
     "route_heading": "Lộ Trình",
-    "detailed_route_heading":"Lộ trình chi tiết",
+    "detailed_route_heading": "Lộ trình chi tiết",
     "timing_route_heading": "Thời gian",
     "highlight_route_heading": "Điểm nổi bật",
     "ticket_heading": "Hạng vé",
     "ticket_description": "Nhấn vào từng Hạng vé để xem chi tiết",
     "kit_heading": "Runner Kit",
-    "kit_description": "Quyền lợi tự chọn nội dung in lên BIB cá nhân <span className=\"text-hr-ember\">dành cho hạng vé Well-being</span>",
-    "kit_meta": "(Nội dung bao gồm với 8 ký tự: chữ và số tự chọn)"
+    "kit_description": "Quyền lợi tự chọn nội dung in lên BIB cá nhân <br className=\"block md:hidden\"/> <span className=\"text-hr-ember\">dành cho hạng vé Well-being</span>",
+    "kit_meta": "(Nội dung bao gồm với 8 ký tự: chữ và số tự chọn)",
+    "search_image_heading": "Lưu giữ khoảnh khắc Happy Run",
+    "search_image_desc": "Tra cứu hình ảnh bằng <span class=\"text-hr-honey text-[10rem] md:text-[28rem] font-bold\">AI</span>",
+    "info_heading": "Thông tin",
+    "info_item_title_1": "Đối tượng",
+    "info_item_title_2": "Lịch trình sự kiện",
+    "info_item_title_3": "Thời gian & địa điểm",
+    "info_item_title_4": "Giải thưởng",
+    "info_item_title_5": "Quy định",
+    "station_heading": "Trạm thử thách",
+    "station_n": "Trạm {{number}}",
+    "faq_heading": "FAQ",
+    "collaboration_units": "Đơn vị cộng tác",
+    "info_booker": "Thông tin người đặt vé",
+    "info_order": "Thông tin đơn hàng",
+    "order_status": "Trạng thái đơn hàng"
   },
   "nutritional_journey": {
     "title": "Hành Trình Dinh Dưỡng",
