--- a/frontend/src/core/locales/resources/en.json
+++ b/frontend/src/core/locales/resources/en.json
@@ -1,28 +1,30 @@
 {
   "common": {
-    "sign_in": "Đăng nhập",
-    "sign_out": "Đăng xuất",
-    "confirm": "Xác nhận",
-    "go_back": "Quay lại",
-    "language": "Ngôn ngữ",
-    "day_d": "Ngày {{day}}",
-    "image_n": "Hình {{number}}",
-    "step_n": "Bước {{number}}",
-    "upload_image": "Tải ảnh lên",
-    "finish": "Hoàn thành",
-    "edit": "Chỉnh sửa",
-    "home_page": "Trang chủ",
-    "login_page": "Đăng nhập",
-    "upload_photo": "Tải ảnh lên",
-    "save_image": "Lưu ảnh",
-    "send_image": "Gửi ảnh",
-    "cancel": "Hủy bỏ",
-    "refresh_page": "Tải lại trang",
-    "from_d_to_d": "Từ {{from}} đến {{to}}",
-    "full_name": "Họ tên",
-    "class": "Lớp",
-    "student_code": "MSHS",
-    "event_email": "Email chương trình"
+    "sign_in": "Sign In",
+    "sign_out": "Sign Out",
+    "confirm": "Confirm",
+    "go_back": "Go Back",
+    "language": "Language",
+    "day_d": "Day {{day}}",
+    "image_n": "Image {{number}}",
+    "step_n": "Step {{number}}",
+    "upload_image": "Upload Image",
+    "finish": "Finish",
+    "edit": "Edit",
+    "home_page": "Home Page",
+    "login_page": "Login Page",
+    "upload_photo": "Upload Photo",
+    "save_image": "Save Image",
+    "send_image": "Send Image",
+    "cancel": "Cancel",
+    "refresh_page": "Refresh Page",
+    "from_d_to_d": "From {{from}} to {{to}}",
+    "full_name": "Full Name",
+    "phone": "Phone Number",
+    "email": "Email",
+    "class": "Class",
+    "student_code": "Student Code",
+    "event_email": "Event Email"
   },
   "notification": {
     "client_error": {
@@ -152,6 +154,7 @@
     "count_down_date": "Only <span className=\"text-[14rem] md:text-[40rem] font-semibold\">{{day}}</span> days <span className=\"text-[14rem] md:text-[40rem] font-semibold\">{{hours}}</span> hours <span className=\"text-[14rem] md:text-[40rem] font-semibold\">{{minutes}}</span> minutes <span className=\"text-[14rem] md:text-[40rem] font-semibold\">{{seconds}}</span> seconds",
     "teaser_heading_1": "Happy",
     "teaser_heading_2": "Run",
+    "teaser_description": "GET READY FOR THE HAPPY RUN 2025 TEASER PREMIERE ON SUNDAY, MARCH 23, 2025",
     "target_heading": "Target",
     "route_heading": "Track",
     "detailed_route_heading": "Track details",
