--- a/frontend/src/core/locales/resources/vn.json
+++ b/frontend/src/core/locales/resources/vn.json
@@ -78,7 +78,7 @@
       "section_2_heading": "PHẦN DÀNH CHO HỌC SINH / GIÁO VIÊN / NHÂN VIÊN TẠI WELLSPRING SAIGON",
       "section_3_heading": "PHẦN DÀNH CHO PHỤ HUYNH / NGƯỜI ĐI CÙNG",
       "section_4_heading": "THÔNG TIN LIÊN HỆ",
-      "section_4_desc_1": "*Thông tin quan trọng giúp BTC liên hệ khi cần và·gửi xác nhận đăng ký đến người tham gia",
+      "section_4_desc_1": "*Thông tin quan trọng giúp BTC liên hệ khi cần và gửi xác nhận đăng ký đến người tham gia",
       "section_4_desc_2": "*Nếu đối tượng đăng ký là Học sinh Tiểu học, vui lòng điền thông tin liên hệ của PHHS hoặc người lớn đi cùng",
       "young_user_warning": "*Lưu ý: với Học sinh Tiểu học cần có người lớn đi cùng",
       "user_code": "Mã số Học sinh/GV-NV",
@@ -155,7 +155,7 @@
     "count_down_date": "Còn <span className=\"text-[14rem] md:text-[40rem] font-semibold\">{{day}}</span> ngày <span className=\"text-[14rem] md:text-[40rem] font-semibold\">{{hours}}</span> giờ <span className=\"text-[14rem] md:text-[40rem] font-semibold\">{{minutes}}</span> phút <span className=\"text-[14rem] md:text-[40rem] font-semibold\">{{seconds}}</span> giây",
     "teaser_heading_1": "Happy",
     "teaser_heading_2": "Run",
-    "teaser_description": "CHỜ ĐÓN TEASER SỰ KIỆN HAPPY RUN 2025 VÀO CHỦ NHẬT, NGÀY 23/03/2025",
+    "teaser_description": "CHỜ ĐÓN TEASER SỰ KIỆN HAPPY RUN 2025 <br/> VÀO CHỦ NHẬT, NGÀY 23/03/2025",
     "target_heading": "Mục tiêu",
     "route_heading": "Lộ Trình",
     "detailed_route_heading": "Lộ trình chi tiết",
