--- a/frontend/src/core/locales/resources/vn.json
+++ b/frontend/src/core/locales/resources/vn.json
@@ -196,5 +196,14 @@
     "sub_heading_2_3": "Cách gửi ảnh",
     "sub_heading_2_4": "Tiêu chí đánh giá",
     "student_not_found": "Vui lòng nhập chính xác MSHS và Họ tên"
+  },
+  "placement_test": {
+    "registration_title": "Đăng ký lịch khảo sát",
+    "registration_closed": "Form đăng ký đã đóng",
+    "registration_number": "STT",
+    "registration_start": "Bắt đầu đăng ký",
+    "time_slots": "Thời gian",
+    "capacity": "# Đã đăng ký",
+    "registered_slot": "Lịch đã đăng ký"
   }
 }
