--- a/frontend/src/core/locales/resources/vn.json
+++ b/frontend/src/core/locales/resources/vn.json
@@ -204,6 +204,14 @@
     "registration_start": "Bắt đầu đăng ký",
     "time_slots": "Thời gian",
     "capacity": "# Đã đăng ký",
-    "registered_slot": "Lịch đã đăng ký"
+    "registered_slot": "Lịch đã đăng ký",
+    "registration_success": {
+      "title": "Đăng ký thành công",
+      "message": "Cảm ơn bạn đã đăng ký tham gia khảo sát. Hãy kiểm tra email để xem thông tin chi tiết."
+    },
+    "registration_failed": {
+      "title": "Đăng ký thất bại",
+      "message": "Hiện tại không còn chỗ trống. Vui lòng chọn lại thời gian khác."
+    }
   }
 }
