--- a/frontend/src/core/locales/resources/en.json
+++ b/frontend/src/core/locales/resources/en.json
@@ -23,6 +23,7 @@
     "phone": "Phone Number",
     "email": "Email",
     "class": "Class",
+    "department": "Department",
     "student_code": "Student Code",
     "event_email": "Email"
   },
