--- a/frontend/src/core/locales/resources/vn.json
+++ b/frontend/src/core/locales/resources/vn.json
@@ -23,6 +23,7 @@
     "phone": "Số điện thoại",
     "email": "Email",
     "class": "Lớp",
+    "department": "Phòng ban",
     "student_code": "MSHS",
     "event_email": "Email chương trình"
   },
